# Klinks

./: .editorconfig  .gitignore  README.md  mkdocs.yml  pyproject.toml
app/: config.py  db.sqlite  forms.py  main.py  models.py
app/static/: script.py
app/static/css/: base.css
app/templates/: index.html
docs/: index.md
docs/dev-guide/: links.md
